--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "webpack --config ./bundler/webpack.prod.js",
     "dev": "webpack serve --config ./bundler/webpack.dev.js",
-    "deploy": "gh-pages -b main -d build"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@babel/core": "^7.13.1",
@@ -15,7 +15,6 @@
     "css-loader": "^5.1.0",
     "dat.gui": "^0.7.7",
     "file-loader": "^6.2.0",
-    "gh-pages": "^3.2.3",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
     "lil-gui": "^0.16.1",
@@ -28,5 +27,8 @@
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
